<resources>
    <string name="app_name">MovPly</string>
    <string name="hint_movie">Película</string>
    <string name="hint_yearmovie">Año</string>
    <string name="text_button_search">Buscar Película</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Example">Example text</string>
    <string name="year_cardview_movie">2017</string>
    <string name="genre_cardview_movie">Thiller</string>
    <string name="imdb_text">IMDB</string>
    <string name="imdb_rating">0.0</string>
    <string name="toolbarMovieTitle">Movie information</string>
    <string name="rottentomatoes_text">Tomatoes</string>
    <string name="metacritic_text">Meta score:</string>
    <string name="plot">Trama</string>
    <string name="yeartext_cardview_movie">Año:\u0020</string>
    <string name="genres_cardview_movie">Genero(s):\u0020</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="Login">Login</string>
    <string name="text_create_account">¿No tienes cuenta?\u0020</string>
    <string name="text_create_account_event"><u>crea una aquí</u>.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_create">Únete</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="cardviewinfo_actors">Actores\u0020</string>
</resources>
