<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MovieDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/linearlayout_paddingtop_moviedetail">

            <TextView
                android:id="@+id/movieDetailsMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/movietitle_textsize"
                android:paddingLeft="@dimen/movietitle_padding_moviedetail"
                android:paddingRight="@dimen/movietitle_padding_moviedetail"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/movie_detail_linearlayout_paddingtop"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <io.netopen.hotbitmapgg.library.view.RingProgressBar
                        android:id="@+id/imdbProgressbar"
                        android:layout_width="@dimen/movie_detail_ringprogressbar_size"
                        android:layout_height="@dimen/movie_detail_ringprogressbar_size"
                        android:layout_gravity="center"
                        app:max="100"
                        app:ringColor="@android:color/darker_gray"
                        app:ringProgressColor="@color/colorPrimary"
                        app:ringWidth="@dimen/movie_detail_ringprogressbar_ringwidth"
                        app:style="STROKE"
                        app:textColor="@color/colorPrimary"
                        app:textIsShow="true"
                        app:textSize="@dimen/movie_detail_ringprogressbar_textsize"/>

                    <TextView
                        android:id="@+id/imdb_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/imdb_rating_size"
                        android:layout_gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imdb_text"
                        android:textSize="@dimen/texview_rating_textsize"
                        android:layout_gravity="center"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/linearLayoutPaddingLeftProgressBar">

                    <io.netopen.hotbitmapgg.library.view.RingProgressBar
                        android:id="@+id/rottenTomatoesProgressbar"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        app:max="100"
                        app:ringColor="@android:color/darker_gray"
                        app:ringProgressColor="@color/colorPrimary"
                        app:ringWidth="@dimen/movie_detail_ringprogressbar_ringwidth"
                        app:style="STROKE"
                        app:textColor="@color/colorPrimary"
                        app:textIsShow="true"
                        app:textSize="@dimen/movie_detail_ringprogressbar_textsize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rottentomatoes_text"
                        android:textSize="@dimen/texview_rating_textsize"
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/movie_detail_paddingtop_textview"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/linearLayoutPaddingLeftProgressBar">

                    <io.netopen.hotbitmapgg.library.view.RingProgressBar
                        android:id="@+id/metacriticsProgressbar"
                        android:layout_width="@dimen/movie_detail_ringprogressbar_size"
                        android:layout_height="@dimen/movie_detail_ringprogressbar_size"
                        android:layout_gravity="center"
                        app:max="100"
                        app:ringColor="@android:color/darker_gray"
                        app:ringProgressColor="@color/colorPrimary"
                        app:ringWidth="@dimen/movie_detail_ringprogressbar_ringwidth"
                        app:style="STROKE"
                        app:textColor="@color/colorPrimary"
                        app:textIsShow="true"
                        app:textSize="@dimen/movie_detail_ringprogressbar_textsize" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MS"
                        android:textSize="@dimen/texview_rating_textsize"
                        android:layout_gravity="center|bottom"
                        android:paddingTop="@dimen/movie_detail_paddingtop_textview"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height_moviedetail"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/plotsize"
                android:text="@string/plot"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/plot_paddingtop"/>

            <TextView
                android:id="@+id/plotMovieDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/plotsize"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/textview_paddingtop_plot"
                android:paddingRight="@dimen/textview_padding_plot"
                android:paddingLeft="@dimen/textview_padding_plot"
                android:paddingBottom="@dimen/paddingPlotTextView_forFab"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarDetailMovie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarMovieDetail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="parallax"/>

            <ak.sh.ay.oblique.ObliqueView
                android:id="@+id/imageHeaderMovieDetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_detail_marginheight_obliqueview"
                android:scaleType="fitXY"
                android:background="@color/backgroudColorMoviePoster"
                app:ending_slant_angle="0"
                app:layout_collapseMode="parallax"
                app:starting_slant_angle="10"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button_youtube_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movie_detail_fab_marginlayout"
        android:layout_gravity="bottom|right"
        android:elevation="@dimen/movie_detail_fab_elevation"
        app:fabSize="normal"
        android:src="@drawable/ytbicon"/>

</android.support.design.widget.CoordinatorLayout>
